--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,5 +42,5 @@ jobs:
       uses: charmed-kubernetes/actions-operator@main
       with:
         provider: microk8s
-    - name: Run lma bundle tests
-      run: tox -vve integration-lma
+    - name: Run lma-rules integration tests
+      run: tox -vve integration
