--- a/tox.ini
+++ b/tox.ini
@@ -69,7 +69,7 @@ deps =
     types-toml
     # pip-check-reqs does not yet work with recent pip
     pip-check-reqs
-    pip<=21.1.3
+    pip==21.1.3
 commands =
     pip-missing-reqs {toxinidir}/src {toxinidir}/lib --requirements-file={toxinidir}/requirements.txt
     pip-extra-reqs {toxinidir}/src {toxinidir}/lib --requirements-file={toxinidir}/requirements.txt
