--- a/tox.ini
+++ b/tox.ini
@@ -2,20 +2,22 @@
 # See LICENSE file for licensing details.
 
 [tox]
-skipsdist=True
+skipsdist = True
 skip_missing_interpreters = True
-envlist = lint, static, unit
+envlist = lint, static-{charm,unit,integration}, unit
 
 [vars]
-src_path = {toxinidir}/src/
-tst_path = {toxinidir}/tests/
+src_path = {toxinidir}/src
+tst_path = {toxinidir}/tests
 all_path = {[vars]src_path} {[vars]tst_path}
+py_path = {toxinidir}/lib:{[vars]src_path}
 
 [testenv]
 basepython = python3
 setenv =
-  PYTHONPATH = {toxinidir}:{toxinidir}/lib:{[vars]src_path}
+  PYTHONPATH = {[vars]py_path}
   PYTHONBREAKPOINT=ipdb.set_trace
+  PY_COLORS=1
 passenv =
   PYTHONPATH
   HOME
@@ -48,38 +50,42 @@ deps =
     isort
     codespell
 commands =
-    codespell {[vars]all_path}
-    codespell {toxinidir}/*.yaml {toxinidir}/*.ini {toxinidir}/*.md \
-      {toxinidir}/*.toml {toxinidir}/*.txt {toxinidir}/.github
+    codespell . --skip .git --skip .tox --skip build --skip lib --skip venv --skip .mypy_cache
     # pflake8 wrapper supports config from pyproject.toml
     pflake8 {[vars]all_path}
     isort --check-only --diff {[vars]all_path}
     black --check --diff {[vars]all_path}
 
-[testenv:static]
+[testenv:static-{charm,unit,integration}]
 description = Run static analysis checks
+setenv =
+    unit: MYPYPATH = {[vars]tst_path}/unit
+    integration: MYPYPATH = {[vars]tst_path}/integration
 deps =
-    -r{toxinidir}/requirements.txt
     mypy
     types-PyYAML
-    pytest
-    pytest-operator
-    juju
     types-setuptools
     types-toml
     # pip-check-reqs does not yet work with recent pip
     pip-check-reqs
-    pip==21.1.3
+    pip<=21.1.3
+    charm,unit: {[testenv:unit]deps}
+    integration: {[testenv:integration]deps}
 commands =
-    pip-missing-reqs {toxinidir}/src {toxinidir}/lib --requirements-file={toxinidir}/requirements.txt
-    pip-extra-reqs {toxinidir}/src {toxinidir}/lib --requirements-file={toxinidir}/requirements.txt
-    mypy {[vars]all_path} {posargs}
+    charm: pip-missing-reqs {toxinidir}/src {toxinidir}/lib --requirements-file={toxinidir}/requirements.txt
+    charm: pip-extra-reqs {toxinidir}/src {toxinidir}/lib --requirements-file={toxinidir}/requirements.txt
+    charm: mypy {[vars]src_path} {posargs}
+    unit: mypy {[vars]tst_path}/unit {posargs}
+    integration: mypy {[vars]tst_path}/integration {posargs}
 
 [testenv:unit]
 description = Run unit tests
+setenv =
+    PYTHONPATH = {[vars]py_path}:{[vars]tst_path}/unit
 deps =
     pytest
     coverage[toml]
+    hypothesis
     -r{toxinidir}/requirements.txt
 commands =
     coverage run \
@@ -91,7 +97,11 @@ commands =
 description = Run integration tests
 deps =
     git+https://github.com/juju/python-libjuju.git
+    #juju
     pytest
     git+https://github.com/charmed-kubernetes/pytest-operator.git
+    aiohttp
+    PyYAML
+    prometheus_api_client
 commands =
     pytest -v --tb native --log-cli-level=INFO -s {posargs} {toxinidir}/tests/integration
