--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,5 +60,7 @@ jobs:
       uses: charmed-kubernetes/actions-operator@main
       with:
         provider: microk8s
+        channel: 1.21/stable
+        charmcraft-channel: latest/candidate
     - name: Run lma-rules integration tests
       run: tox -vve integration
