--- a/tox.ini
+++ b/tox.ini
@@ -96,10 +96,11 @@ commands =
 [testenv:integration]
 description = Run integration tests
 deps =
-    git+https://github.com/juju/python-libjuju.git
-    #juju
+    #git+https://github.com/juju/python-libjuju.git
+    juju
     pytest
-    git+https://github.com/charmed-kubernetes/pytest-operator.git
+    #git+https://github.com/charmed-kubernetes/pytest-operator.git
+    pytest-operator
     aiohttp
     PyYAML
     prometheus_api_client
