Remove the git-sync pebble service - only use `--one-time` (#17)
* remove service - only use --one-time
* remove the 'wait' config option
* add log dumps, cloned from charm-logdump-action and canonical/notebook-operators
* use lxd 4.0/stable

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,5 +60,6 @@ jobs:
       uses: charmed-kubernetes/actions-operator@main
       with:
         provider: microk8s
+        lxd-channel: 4.0/stable
     - name: Run lma-rules integration tests
       run: tox -vve integration
