--- a/tox.ini
+++ b/tox.ini
@@ -97,10 +97,10 @@ commands =
 description = Run integration tests
 deps =
     #git+https://github.com/juju/python-libjuju.git
-    juju
+    juju==2.9.7
     pytest
     #git+https://github.com/charmed-kubernetes/pytest-operator.git
-    pytest-operator
+    pytest-operator==0.15.0
     aiohttp
     PyYAML
     prometheus_api_client
