Set cloning depth default to 1

--- a/config.yaml
+++ b/config.yaml
@@ -17,8 +17,8 @@ options:
     type: int
     description: >
       Cloning depth, to truncate commit history to the specified number of commits.
-      Zero (default) means no truncating.
-    default: 0
+      Zero means no truncating.
+    default: 1
   prometheus_alert_rules_path:
     type: string
     description: Relative path in repo to prometheus rules.
