--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -1,78 +1,12 @@
-name: Pull Request
+name: Pull Requests
+
 on:
   pull_request:
     branches:
       - main
 
 jobs:
-  lib-check:
-    name: Check the charm uses up-to-date charm libraries
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Check libs
-        uses: canonical/charm-lib-checker-action@main
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-
-  static-analysis:
-    name: Static analysis
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Install dependencies
-        run: python3 -m pip install tox
-      - name: Run static analysis (charm)
-        run: tox -vve static-charm
-      - name: Run static analysis (unit tests)
-        run: tox -vve static-unit
-      - name: Run static analysis (integration tests)
-        run: tox -vve static-integration
-
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Install dependencies
-        run: python3 -m pip install tox
-      - name: Run linters
-        run: tox -vve lint
-
-  unit-test:
-    name: Unit tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Install dependencies
-        run: python -m pip install tox
-      - name: Run tests
-        run: tox -vve unit
-
-  integration-test:
-    name: Integration tests (microk8s)
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Setup operator environment
-        uses: charmed-kubernetes/actions-operator@main
-        with:
-          provider: microk8s
-          lxd-channel: 4.0/stable
-      - name: Run lma-rules integration tests
-        run: tox -vve integration
+  pull-request:
+    name: PR
+    uses: canonical/observability/.github/workflows/pull-request.yaml@main
+    secrets: inherit
