--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # Copyright 2021 Canonical Ltd.
 # See LICENSE file for licensing details.
 
-ops
+# ops
+git+https://github.com/canonical/operator/#egg=ops
 PyYAML
 lightkube
 lightkube-models
