--- a/tox.ini
+++ b/tox.ini
@@ -59,24 +59,31 @@ commands =
 [testenv:static-{charm,unit,integration}]
 description = Run static analysis checks
 setenv =
-    unit: MYPYPATH = {[vars]tst_path}/unit
-    integration: MYPYPATH = {[vars]tst_path}/integration
+    charm: MYPYPATH = {toxinidir}/lib
+    unit: MYPYPATH = {toxinidir}/lib:{[vars]src_path}
+    integration: MYPYPATH = {toxinidir}/lib:{[vars]src_path}:{[vars]tst_path}/integration
 deps =
     mypy
     types-PyYAML
     types-setuptools
     types-toml
-    # pip-check-reqs does not yet work with recent pip
-    pip-check-reqs
-    pip<=21.1.3
     charm,unit: {[testenv:unit]deps}
     integration: {[testenv:integration]deps}
 commands =
-    charm: pip-missing-reqs {toxinidir}/src {toxinidir}/lib --requirements-file={toxinidir}/requirements.txt
-    charm: pip-extra-reqs {toxinidir}/src {toxinidir}/lib --requirements-file={toxinidir}/requirements.txt
     charm: mypy {[vars]src_path} {posargs}
     unit: mypy {[vars]tst_path}/unit {posargs}
     integration: mypy {[vars]tst_path}/integration {posargs}
+
+[testenv:reqs]
+description = Check for missing or unused requirements
+deps =
+    -r{toxinidir}/requirements.txt
+    pip-check-reqs
+    # pip-check-reqs does not yet work with recent pip
+    pip<=21.1.3
+commands =
+    pip-missing-reqs {toxinidir}/src {toxinidir}/lib --requirements-file={toxinidir}/requirements.txt
+    pip-extra-reqs {toxinidir}/src {toxinidir}/lib --requirements-file={toxinidir}/requirements.txt
 
 [testenv:unit]
 description = Run unit tests
@@ -96,10 +103,8 @@ commands =
 [testenv:integration]
 description = Run integration tests
 deps =
-    #git+https://github.com/juju/python-libjuju.git
     juju
     pytest
-    #git+https://github.com/charmed-kubernetes/pytest-operator.git
     pytest-operator
     aiohttp
     PyYAML
