empty static-lib tox env so CI passes

--- a/tox.ini
+++ b/tox.ini
@@ -74,6 +74,11 @@ commands =
     unit: mypy {[vars]tst_path}/unit {posargs}
     integration: mypy {[vars]tst_path}/integration {posargs}
 
+[testenv:static-lib]
+description = Empty check because we have no libs
+commands =
+    ;
+
 [testenv:reqs]
 description = Check for missing or unused requirements
 deps =
