--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 # Copyright 2021 Canonical Ltd.
 # See LICENSE file for licensing details.
 
-# ops
-git+https://github.com/canonical/operator/#egg=ops
+ops
 PyYAML
 lightkube
 lightkube-models
