--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,6 @@ copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"
 [tool.mypy]
 pretty = true
 python_version = 3.8
-mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/lib"
 follow_imports = "silent"
 warn_redundant_casts = true
 warn_unused_ignores = true
@@ -52,9 +51,15 @@ allow_redefinition = true
 
 # Ignore libraries that do not have type hint nor stubs
 [[tool.mypy.overrides]]
-module = ["ops.*", "kubernetes.*", "pytest_operator.*", "urllib3.*", "prometheus_api_client", "requests"]
+module = ["ops.*", "kubernetes.*", "urllib3.*", "prometheus_api_client", "requests", "helpers"]
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = ["pytest_operator.*"]
+follow_imports = "skip"
 ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 minversion = "6.0"
 log_cli_level = "INFO"
+asyncio_mode = "auto"
