--- a/actions.yaml
+++ b/actions.yaml
@@ -3,5 +3,5 @@
 
 sync-now:
   description: |
-    Sync relation data with files on disk. This action can be used to force an update instead of
-    waiting for git-sync wait-time to elapse and udpate-status hook to fire.
+    Sync relation data with files from the repo. This action can be used to force an update instead of
+    waiting for the update-status hook to fire.
