--- a/tox.ini
+++ b/tox.ini
@@ -108,7 +108,7 @@ commands =
 [testenv:integration]
 description = Run integration tests
 deps =
-    juju
+    juju == 3.0.1
     pytest
     pytest-operator
     aiohttp
