--- a/tox.ini
+++ b/tox.ini
@@ -108,7 +108,7 @@ commands =
 [testenv:integration]
 description = Run integration tests
 deps =
-    juju
+    juju == 2.9.10
     pytest
     pytest-operator
     aiohttp
