use pyright instead of mypy

--- a/tox.ini
+++ b/tox.ini
@@ -48,28 +48,15 @@ commands =
     ruff {[vars]all_path}
     black --check --diff {[vars]all_path}
 
-[testenv:static-{charm,unit,integration}]
+[testenv:static-charm]
 description = Run static analysis checks
 setenv =
     charm: MYPYPATH = {toxinidir}/lib
-    unit: MYPYPATH = {toxinidir}/lib:{[vars]src_path}
-    integration: MYPYPATH = {toxinidir}/lib:{[vars]src_path}:{[vars]tst_path}/integration
 deps =
-    mypy
-    types-PyYAML
-    types-setuptools
-    types-toml
-    charm,unit: {[testenv:unit]deps}
-    integration: {[testenv:integration]deps}
+    pyright
+    -r{toxinidir}/requirements.txt
 commands =
-    charm: mypy {[vars]src_path} {posargs}
-    unit: mypy {[vars]tst_path}/unit {posargs}
-    integration: mypy {[vars]tst_path}/integration {posargs}
-
-[testenv:static-lib]
-description = Empty check because we have no libs
-commands =
-    ;
+    pyright {[vars]src_path} {posargs}
 
 [testenv:reqs]
 description = Check for missing or unused requirements
