--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,29 +28,10 @@ per-file-ignores = {"tests/*" = ["D100","D101","D102","D103"]}
 convention = "google"
 
 # Static analysis tools configuration
-[tool.mypy]
-pretty = true
-python_version = 3.8
-follow_imports = "silent"
-warn_redundant_casts = true
-warn_unused_ignores = true
-warn_unused_configs = true
-show_traceback = true
-show_error_codes = true
-namespace_packages = true
-explicit_package_bases = true
-check_untyped_defs = true
-allow_redefinition = true
-
-# Ignore libraries that do not have type hint nor stubs
-[[tool.mypy.overrides]]
-module = ["ops.*", "kubernetes.*", "urllib3.*", "prometheus_api_client", "requests", "helpers"]
-ignore_missing_imports = true
-
-[[tool.mypy.overrides]]
-module = ["pytest_operator.*"]
-follow_imports = "skip"
-ignore_missing_imports = true
+[tool.pyright]
+extraPaths = ["lib"]
+pythonVersion = "3.8"
+pythonPlatform = "Linux"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
