--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ convention = "google"
 [tool.pyright]
 extraPaths = ["lib"]
 pythonVersion = "3.8"
-pythonPlatform = "Linux"
+pythonPlatform = "All"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
