--- a/tox.ini
+++ b/tox.ini
@@ -58,6 +58,9 @@ deps =
 commands =
     pyright {[vars]src_path} {posargs}
 
+[testenv:static-lib]
+description = Empty environment (no libs)
+
 [testenv:reqs]
 description = Check for missing or unused requirements
 deps =
@@ -83,6 +86,9 @@ commands =
       --source={[vars]src_path} \
       -m pytest -v --tb native --log-cli-level=INFO -s {posargs} {[vars]tst_path}/unit
     coverage report
+
+[testenv:scenario]
+description = Empty environment (no scenario)
 
 [testenv:integration]
 description = Run integration tests
