fetch-lib and add cosl to deps

--- a/tox.ini
+++ b/tox.ini
@@ -80,6 +80,7 @@ deps =
     pytest
     coverage[toml]
     hypothesis
+    cosl
     -r{toxinidir}/requirements.txt
 commands =
     coverage run \
@@ -94,6 +95,7 @@ description = Empty environment (no scenario)
 description = Run integration tests
 deps =
     juju
+    cosl
     pytest
     pytest-operator
     aiohttp
