add missing tox environments and fetch-lib (#74)
* fix tox envs

* fetch-lib and add cosl to deps

* pin ops version to fix unit tests

--- a/tox.ini
+++ b/tox.ini
@@ -58,6 +58,9 @@ deps =
 commands =
     pyright {[vars]src_path} {posargs}
 
+[testenv:static-lib]
+description = Empty environment (no libs)
+
 [testenv:reqs]
 description = Check for missing or unused requirements
 deps =
@@ -77,6 +80,7 @@ deps =
     pytest
     coverage[toml]
     hypothesis
+    cosl
     -r{toxinidir}/requirements.txt
 commands =
     coverage run \
@@ -84,10 +88,14 @@ commands =
       -m pytest -v --tb native --log-cli-level=INFO -s {posargs} {[vars]tst_path}/unit
     coverage report
 
+[testenv:scenario]
+description = Empty environment (no scenario)
+
 [testenv:integration]
 description = Run integration tests
 deps =
     juju
+    cosl
     pytest
     pytest-operator
     aiohttp
