--- a/tox.ini
+++ b/tox.ini
@@ -4,102 +4,61 @@
 [tox]
 skipsdist = True
 skip_missing_interpreters = True
-envlist = lint, static-charm, unit
+envlist = lint, static, unit
 
 [vars]
 src_path = {toxinidir}/src
 tst_path = {toxinidir}/tests
 all_path = {[vars]src_path} {[vars]tst_path}
-py_path = {toxinidir}/lib:{[vars]src_path}
+uv_flags = --frozen --isolated --extra=dev
 
 [testenv]
+allowlist_externals = uv
 basepython = python3
 setenv =
-  PYTHONPATH = {[vars]py_path}
+  PYTHONPATH = {toxinidir}:{toxinidir}/lib:{[vars]src_path}
   PYTHONBREAKPOINT=ipdb.set_trace
   PY_COLORS=1
 passenv =
   PYTHONPATH
-  HOME
-  PATH
-  CHARM_BUILD_DIR
-  MODEL_SETTINGS
-  HTTP_PROXY
-  HTTPS_PROXY
-  NO_PROXY
+  CHARM_PATH
 
-[testenv:fmt]
-description = Apply coding style standards to code
-deps =
-    black
-    ruff
+[testenv:lock]
+description = Update uv.lock with the latest deps
 commands =
-    ruff check --fix {[vars]all_path}
-    black {[vars]all_path}
+  uv lock --upgrade --no-cache
 
 [testenv:lint]
-description = Check code against coding style standards
-deps =
-    black
-    ruff
-    codespell
+description = Lint the code
 commands =
-    codespell . --skip .git --skip .tox --skip build --skip lib --skip venv --skip .mypy_cache
-    ruff check {[vars]all_path}
-    black --check --diff {[vars]all_path}
+    uv run {[vars]uv_flags} ruff check {[vars]all_path}
 
-[testenv:static-charm]
-description = Run static analysis checks
-setenv =
-    charm: MYPYPATH = {toxinidir}/lib
-deps =
-    pyright
-    -r{toxinidir}/requirements.txt
+[testenv:static]
+description = Run static checks
+allowlist_externals =
+  {[testenv]allowlist_externals}
+  /usr/bin/env
 commands =
-    pyright {[vars]src_path} {posargs}
+    uv run {[vars]uv_flags} pyright {[vars]all_path}
 
-[testenv:static-lib]
-description = Empty environment (no libs)
-
-[testenv:reqs]
-description = Check for missing or unused requirements
-deps =
-    -r{toxinidir}/requirements.txt
-    pip-check-reqs
-    # pip-check-reqs does not yet work with recent pip
-    pip<=21.1.3
+[testenv:fmt]
+description = "Format the code"
 commands =
-    pip-missing-reqs {toxinidir}/src {toxinidir}/lib --requirements-file={toxinidir}/requirements.txt
-    pip-extra-reqs {toxinidir}/src {toxinidir}/lib --requirements-file={toxinidir}/requirements.txt
+    uv run {[vars]uv_flags} ruff check --fix-only {[vars]all_path}
 
 [testenv:unit]
 description = Run unit tests
 setenv =
-    PYTHONPATH = {[vars]py_path}:{[vars]tst_path}/unit
-deps =
-    pytest
-    coverage[toml]
-    hypothesis
-    cosl
-    -r{toxinidir}/requirements.txt
+    PYTHONPATH = {toxinidir}:{toxinidir}/lib:{[vars]src_path}:{[vars]tst_path}/unit
+allowlist_externals=
+    {[testenv]allowlist_externals}
+    /usr/bin/env
 commands =
-    coverage run \
-      --source={[vars]src_path} \
-      -m pytest -v --tb native --log-cli-level=INFO -s {posargs} {[vars]tst_path}/unit
-    coverage report
-
-[testenv:scenario]
-description = Empty environment (no scenario)
+    uv run {[vars]uv_flags} coverage run --source={[vars]src_path} -m pytest \
+        {[vars]tst_path}/unit {posargs}
+    uv run {[vars]uv_flags} coverage report
 
 [testenv:integration]
 description = Run integration tests
-deps =
-    juju
-    cosl
-    pytest
-    pytest-operator
-    aiohttp
-    PyYAML
-    prometheus_api_client
 commands =
-    pytest -v --tb native --log-cli-level=INFO -s {posargs} {toxinidir}/tests/integration
+    uv run {[vars]uv_flags} pytest --exitfirst {[vars]tst_path}/integration {posargs}
