add cosl to deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
   "opentelemetry-exporter-otlp-proto-http>=1.21.0",
   "pydantic",
   "requests",
+  "cosl",
 ]
 
 [project.optional-dependencies]
