--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dev = [
   "ruff",
   "codespell",
   # Static
-  "pyright",
+  "pyright<1.1.399", # 1.1.399 vendors typeshed that dropped Python 3.8 support
   # Unit
   "pytest",
   "coverage[toml]",
@@ -30,7 +30,7 @@ dev = [
   # Integration
   "juju",
   "pytest-operator",
-  "aiohttp",
+  "aiohttp!=3.11.13",  # Yanked
   "prometheus_api_client",
   "sh",
 ]
