--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 [project]
 name = "cos-configuration-k8s"
 version = "0.0"
-requires-python = "~=3.8"
+requires-python = "~=3.10"
 
 dependencies = [
   "ops",
@@ -27,6 +27,7 @@ dev = [
   "pytest",
   "coverage[toml]",
   "hypothesis",
+  "ops[testing]",
   # Integration
   "juju",
   "pytest-operator",
